[gd_scene load_steps=24 format=3 uid="uid://daajqm8s1mbjc"]

[ext_resource type="Script" path="res://enemy.gd" id="1_ckvms"]
[ext_resource type="Texture2D" uid="uid://fcad6q65plhh" path="res://noBKG_KnightIdle_strip.png" id="1_w8rxe"]
[ext_resource type="Script" path="res://finite_state_machine.gd" id="3_0wq4v"]
[ext_resource type="Script" path="res://enemy_state_idle.gd" id="4_bik60"]
[ext_resource type="Script" path="res://enemy_state_walk.gd" id="5_hwvra"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mol76"]
atlas = ExtResource("1_w8rxe")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqk44"]
atlas = ExtResource("1_w8rxe")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpwin"]
atlas = ExtResource("1_w8rxe")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6rtm"]
atlas = ExtResource("1_w8rxe")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fvc5"]
atlas = ExtResource("1_w8rxe")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_it0h6"]
atlas = ExtResource("1_w8rxe")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_35i4s"]
atlas = ExtResource("1_w8rxe")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xus6v"]
atlas = ExtResource("1_w8rxe")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wulcq"]
atlas = ExtResource("1_w8rxe")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqp3b"]
atlas = ExtResource("1_w8rxe")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rxtm"]
atlas = ExtResource("1_w8rxe")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vpwx"]
atlas = ExtResource("1_w8rxe")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wt6ef"]
atlas = ExtResource("1_w8rxe")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_356ub"]
atlas = ExtResource("1_w8rxe")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_glfsv"]
atlas = ExtResource("1_w8rxe")
region = Rect2(896, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_6eeji"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mol76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqk44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpwin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6rtm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fvc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_it0h6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35i4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xus6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wulcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqp3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rxtm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vpwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt6ef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_356ub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glfsv")
}],
"loop": true,
"name": &"idle",
"speed": 14.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w3bhv"]
height = 32.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wgldx"]
radius = 7.0
height = 26.0

[node name="Enemy" type="CharacterBody2D"]
position = Vector2(0, -15)
script = ExtResource("1_ckvms")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6eeji")
animation = &"idle"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Area2D" type="Area2D" parent="." groups=["enemy"]]
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -2)
shape = SubResource("CapsuleShape2D_w3bhv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_wgldx")

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("3_0wq4v")
state = NodePath("EnemyWalkState")

[node name="EnemyIdleState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("4_bik60")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="EnemyWalkState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("5_hwvra")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")
speed = 10
GRAVITY = 100
range = 50

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
